@@ -124,7 +124,6 @@ and how to embed it in other applications.
 \input{libmath}
 \input{libcmath}
 \input{librandom}
-\input{libwhrandom}
 \input{libbisect}
 \input{libcollections}
 \input{libheapq}
@@ -354,7 +353,6 @@ and how to embed it in other applications.
 %\input{libcmpcache}
 %\input{libcmp}
 %\input{libni}
-%\input{librand}
 %\input{libregex}
 %\input{libregsub}
 
